# fastapi-production-boilerplate

./: .env.example  .gitignore  404.html  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml  docs.yml
alembic/: env.py
alembic/versions/: 001_create_users_table.py
api-reference/: index.html
app/: config.py  database.py  dependencies.py  exceptions.py  main.py
app/middleware/: logging.py  rate_limit.py
app/models/: __init__.py  base.py  user.py
app/routers/: auth.py  health.py  users.py
app/schemas/: __init__.py  user.py
app/services/: auth.py  user.py
app/workers/: celery_app.py  tasks.py
architecture/: index.html
deployment/: index.html
docs/: api-reference.md  architecture.md  deployment.md  index.md  quickstart.md
quickstart/: index.html
scripts/: create_admin.py  seed.py
search/: search_index.json
tests/: conftest.py  test_auth.py  test_health.py  test_rate_limit.py  test_users.py
